导入导出全部数据，fix bug
